# exiftool-rs-wrapper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README-EN.md  README.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
benches/: bench_batch.rs  bench_comparison.rs  bench_metadata.rs  bench_pool.rs  bench_write.rs
examples/: advanced_features.rs  async_performance.rs  async_usage.rs  basic_usage.rs  batch_processing.rs  error_handling.rs  performance_optimization.rs  serde_example.rs
scripts/: README.md  fix_tag_naming.py  fix_types_naming.py  generate_tags.sh  generate_tags_camelcase.py
src/: advanced.rs  async_ext.rs  batch.rs  binary.rs  config.rs  error.rs  file_ops.rs  format.rs  geo.rs  lib.rs  lib_tags.rs  main.rs  pool.rs  process.rs  query.rs  repl.rs  retry.rs  stream.rs  types.rs  write.rs
src/structs/: common.rs  mod.rs
src/tags/: canon.rs  common.rs  exif.rs  fuji.rs  gps.rs  iptc.rs  mod.rs  nikon.rs  olympus.rs  other.rs  panasonic.rs  sony.rs  standard.rs  unified.rs  xmp.rs
src/tags/audio/: aac.rs  aiff.rs  ape.rs  audible.rs  flac.rs  id3.rs  mod.rs  opus.rs  riff.rs  vorbis.rs  wavpack.rs
src/tags/formats/: bmp.rs  dng.rs  dpx.rs  gif.rs  ico.rs  jpeg.rs  jpeg2000.rs  mod.rs  pcx.rs  pdf.rs  png.rs  raw.rs  tiff.rs
src/tags/standard/: exif.rs  gps.rs  iptc.rs  mod.rs  xmp.rs
src/tags/vendors/: canon.rs  fuji.rs  mod.rs  nikon.rs  olympus.rs  panasonic.rs  sony.rs
src/tags/video/: mod.rs  quicktime.rs
tests/: behavior_consistency.rs  compatibility_report.rs  e2e.rs  multi_command.rs  option_coverage.rs  performance_gate.rs
tests/data/compatibility/: capability_baseline.json
