[package]
name = "exiftool-rs-wrapper"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust wrapper for ExifTool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openappsys/exiftool-rs-wrapper"
keywords = ["exif", "metadata", "exiftool", "wrapper"]
categories = ["multimedia::images", "api-bindings"]
rust-version = "1.94"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
base64 = "0.22"
tokio = { version = "1.0", features = ["sync", "rt"], optional = true }
futures = { version = "0.3", optional = true }
tempfile = "3.27"
lru = "0.12"

[features]
default = []
async = ["tokio", "futures"]
