[package]
name = "exiftool-rs-wrapper"
version = "0.1.2"
edition = "2024"
authors = ["Open Application Systems <oss@openappsys.com>"]
description = "一个高性能、类型安全的 ExifTool Rust 封装库，支持异步 API"
license = "Apache-2.0"
repository = "https://github.com/openappsys/exiftool-rs-wrapper"
documentation = "https://docs.rs/exiftool-rs-wrapper"
homepage = "https://github.com/openappsys/exiftool-rs-wrapper"
readme = "README.md"
keywords = ["exif", "metadata", "exiftool", "wrapper", "image"]
categories = ["multimedia::images", "api-bindings", "multimedia::video"]
rust-version = "1.94"
include = [
    "/src",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README-EN.md",
    "/CHANGELOG.md",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
base64 = "0.22"
tokio = { version = "1.50", features = ["sync", "rt", "time"], optional = true }
futures = { version = "0.3", optional = true }
tempfile = "3.27"
lru = "0.16"

[features]
default = ["all-tags"]
async = ["tokio", "futures"]

# 标签模块 feature flags - 按需编译
# 基础模块
exif = []     # EXIF 标准标签（图像宽度、高度、曝光等）
iptc = []     # IPTC 标签（新闻、标题、关键词等）
xmp = []      # XMP 标签（可扩展元数据）
gps = []      # GPS 标签（地理位置信息）

# 厂商特定模块
canon = []    # Canon MakerNotes
nikon = []    # Nikon MakerNotes
sony = []     # Sony MakerNotes
fuji = []     # FujiFilm MakerNotes
olympus = []  # Olympus MakerNotes
panasonic = [] # Panasonic MakerNotes

# 其他所有标签（15000+ 个）
other = []

# 预设组合
standard = ["exif", "iptc", "xmp", "gps"]  # 标准元数据
vendors = ["canon", "nikon", "sony", "fuji", "olympus", "panasonic"]  # 所有厂商
all-tags = ["standard", "vendors", "other"]  # 所有标签（你最后还是会全部编译上，哈哈！）
minimal = ["exif"]  # 最小体积，仅基本 EXIF

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench_metadata"
harness = false

[[bench]]
name = "bench_write"
harness = false

[[bench]]
name = "bench_batch"
harness = false

[[bench]]
name = "bench_pool"
harness = false

[[bench]]
name = "bench_comparison"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"

[[example]]
name = "advanced_features"
path = "examples/advanced_features.rs"

[[example]]
name = "async_usage"
path = "examples/async_usage.rs"
required-features = ["async"]

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "performance_optimization"
path = "examples/performance_optimization.rs"
