[package]
name = "exiftool-rs-wrapper"
version = "0.1.4"
edition = "2024"
authors = ["Open Application Systems <oss@openappsys.com>"]
description = "一个高性能、类型安全的 ExifTool Rust 封装库，支持异步 API"
license = "Apache-2.0"
repository = "https://github.com/openappsys/exiftool-rs-wrapper"
documentation = "https://docs.rs/exiftool-rs-wrapper"
homepage = "https://github.com/openappsys/exiftool-rs-wrapper"
readme = "README.md"
keywords = ["exif", "metadata", "exiftool", "wrapper", "image"]
categories = ["multimedia::images", "api-bindings", "multimedia::video"]
rust-version = "1.94"
include = [
    "/src",
    "/tests",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README-EN.md",
    "/CHANGELOG.md",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
base64 = "0.22"
tokio = { version = "1.50", features = ["sync", "rt", "time"], optional = true }
futures = { version = "0.3", optional = true }
tempfile = "3.27"
lru = "0.16"
clap = { version = "4.6", features = ["derive"], optional = true }

[features]
default = ["balanced", "cli"]
async = ["tokio", "futures"]
cli = ["clap"]

# ============================================================================
# 标签模块 feature flags - 完全模块化，自由组合
# ============================================================================

# 基础标准标签
exif = []
iptc = []
xmp = []
gps = []

# 主流厂商
canon = []
nikon = []
sony = []

# 其他厂商
fuji = []
olympus = []
panasonic = []

# 其他所有标签
other = []

# ========== 预设组合 ==========
# 标准元数据（不含厂商）
standard = ["exif", "iptc", "xmp", "gps"]

# 常用厂商（自动包含标准元数据）
vendors-common = ["canon", "nikon", "sony", "standard"]

# 图像处理专用
image = ["standard", "vendors-common"]

# 视频处理专用
video = []

# 音频处理专用
audio = []

# 文件格式支持
image-formats = []

# 最小体积（仅基本 EXIF + common）
minimal = []

# 平衡方案（推荐）：标准 + 主流厂商
balanced = ["standard", "vendors-common"]

# Serde 结构体支持
serde-structs = []

# 完整功能（所有标签）
full = ["balanced", "fuji", "olympus", "panasonic", "video", "audio", "image-formats", "other", "serde-structs"]

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench_metadata"
harness = false

[[bench]]
name = "bench_write"
harness = false

[[bench]]
name = "bench_batch"
harness = false

[[bench]]
name = "bench_pool"
harness = false

[[bench]]
name = "bench_comparison"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"

[[example]]
name = "advanced_features"
path = "examples/advanced_features.rs"

[[example]]
name = "async_usage"
path = "examples/async_usage.rs"
required-features = ["async"]

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "performance_optimization"
path = "examples/performance_optimization.rs"

[[example]]
name = "serde_example"
path = "examples/serde_example.rs"
required-features = ["serde-structs"]
